# Engram

./: .gitignore  README.md  pyproject.toml
benchmarks/: BENCHMARKS.md  __init__.py  _smoke5.py  bench_locomo.py  bench_longmemeval.py  conftest.py  download_datasets.py  metrics.py  run_benchmark.py  test_conflicts.py  test_e2e.py  test_pipeline.py  test_retrieval.py  think_adapter.py
benchmarks/datasets/: README.md  synthetic_conversations.json  synthetic_questions.json
benchmarks/results/: locomo_20260413_114549_summary.json  locomo_20260413_143747.jsonl  locomo_20260413_143747_summary.json  locomo_20260413_143849.jsonl  locomo_20260413_143849_summary.json  locomo_20260413_153206.jsonl  locomo_20260413_153206_summary.json  locomo_20260413_154122.jsonl  locomo_20260413_154122_summary.json  locomo_20260413_154239.jsonl  locomo_20260413_154239_summary.json  locomo_20260413_154318.jsonl  locomo_20260413_154318_summary.json  locomo_20260413_154422.jsonl  locomo_20260413_154422_summary.json  locomo_20260413_162021.jsonl  locomo_20260413_162021_summary.json  locomo_20260413_163843.jsonl  locomo_20260413_163843_summary.json  locomo_20260413_165032.jsonl  locomo_20260413_165032_summary.json  locomo_20260413_171336.jsonl  locomo_20260413_171336_summary.json  locomo_20260413_172646.jsonl  locomo_20260413_172646_summary.json  locomo_20260413_182326.jsonl  locomo_20260413_182326_summary.json  locomo_20260413_191426_summary.json  longmemeval_s_20260413_114640.jsonl  longmemeval_s_20260413_114640_summary.json  longmemeval_s_20260413_121137.jsonl  longmemeval_s_20260413_121137_summary.json  project_filtered_test.jsonl  raw_dev.jsonl  raw_test.jsonl
docs/: data-flow.md  llm-integration.md
src/engram/: __init__.py  __main__.py  cli.py  config.py  conflicts.py  decay.py  dedup.py  extract.py  facts.py  index.py  ingest.py  layers.py  learn.py  llm.py  mcp_server.py  projects.py  quality.py  remember.py  (+3 more)
tests/: conftest.py  test_engram.py  test_index_facts.py  test_learn.py  test_llm.py  test_rerank.py
